# curr-api

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 034481f69978_initial.py
app/api/endpoints/: currency.py  users.py
app/api/schemas/: currency.py  users.py
app/core/: config.py  exception_handlers.py  hash.py  security.py
app/db/: database.py  models.py
app/repositories/: base_repository.py  users_repository.py
app/services/: users_service.py
app/utils/: exception_handlers.py  external_api.py  uow.py
tests/: test_currency_endpoints.py  test_users_endpoints.py
