[project]
name = "curr-api"
version = "0.1.0"
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
description = "An easy to use API to check the latest global currency rates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.115.7",
]

[tool.uv]
dev-dependencies = [
    "flake8>=7.1.1",
]
