[project]
name = "curr-api"
version = "0.1.0"
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
description = "An easy to use API to check the latest global currency rates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[all]>=0.115.7",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.37",
]

[tool.uv]
dev-dependencies = [
    "flake8>=7.1.1",
]
